# chord-charts-library

./: .gitignore  LICENSE  NOTES.md  README.md  TODO.md  api.js  app.js  index.html  manifest.webmanifest  pyproject.toml  scrapy.cfg  sw.js  view.html
archive/admin/: .htaccess  .htpasswd  index.php
archive/admin/tablatures/: display.php  format.php  import.php  parser.php
archive/chord-charts/: .htaccess  download.php  download2.php  index.php  infos.php  random.php  stats.php  todo kwakers.txt  viewer.php
archive/chord-charts/ajax/: more-results.php
archive/chord-charts/css/: print.css  style.css  viewer.css
archive/chord-charts/css/img/: sprite_menu.psd
archive/chord-charts/css/social/stylesheets/: arthref.css
archive/chord-charts/include/: javascript.php  page.php
archive/chord-charts/include/engine/display/: index.php  infos.php  page.php  results.php  viewer.php
archive/chord-charts/include/engine/process/: bdd.php  parser.php
archive/chord-charts/js/: index.js  viewer.js
ccl/: __init__.py
ccl/charts/: ireal_pro_chart.py
ccl/commons/: base_enum.py
ccl/db/: models.py
charts-scraper/: settings.py
charts-scraper/spiders/: irealb_spider.py
cli/: import.py  ireal_csv_maker.py  ireal_merge.py  ireal_parser.py  ireal_song_extractor.py  song.py
css/: style.css  view.css
data/: irealb_urls_20260503_sorted_failed.txt
db/: chord_charts.sqlite
js/: api.js  app.js  config.js  filters.js  ireal-chart.js  pwa.js  stats.js  table.js  viewer.js
scraper/: exporters.py  settings.py
scraper/spiders/: irealb_spider.py
sql/: console.sql
