[project]
name = "chord-charts-library"
version = "0.1.1"
description = "A library for chord charts"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "OrangePeelFX"}
]
keywords = ["chord", "charts", "music"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "scrapy",
  "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/chord-charts-library"
